Bug 94965 - [11 Regression] ICE during SLP since r11-59-g308bc496884706af4b3077171cbac684c7a6f7c6
Summary: [11 Regression] ICE during SLP since r11-59-g308bc496884706af4b3077171cbac684...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 10.0
: P1 normal
Target Milestone: 11.0
Assignee: Richard Biener
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2020-05-06 08:29 UTC by Martin Liška
Modified: 2020-05-06 09:02 UTC (History)
1 user (show)

See Also:
Host: x86_64-linux-gnu
Target: ppc64le-linux-gnu
Build:
Known to work: 10.0
Known to fail: 11.0
Last reconfirmed: 2020-05-06 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Liška 2020-05-06 08:29:07 UTC
I see the following ICE:

$ /dev/shm/gcc-objdir-bisect/gcc/xgcc -B/dev/shm/gcc-objdir-bisect/gcc /home/marxin/Programming/gcc/gcc/testsuite/gfortran.dg/aliasing_dummy_4.f90 --param=scev-max-expr-size=0 -mno-vsx -O3 -c
during GIMPLE pass: slp
/home/marxin/Programming/gcc/gcc/testsuite/gfortran.dg/aliasing_dummy_4.f90:8:0:

    8 | program  test_f90
      | 
internal compiler error: Segmentation fault
0x7ffff78fef1f ???
	/usr/src/debug/glibc-2.31-4.1.x86_64/signal/../sysdeps/unix/sysv/linux/x86_64/sigaction.c:0
0x7ffff78e9cea __libc_start_main
	../csu/libc-start.c:308
0x8fdf59 ???
	../sysdeps/x86_64/start.S:120
Comment 1 Richard Biener 2020-05-06 08:36:14 UTC
Huh.  mine.
Comment 2 Richard Biener 2020-05-06 08:43:03 UTC
@@ -9319,7 +9364,8 @@ vectorizable_load (stmt_vec_info stmt_info, gimple_stmt_it
erator *gsi,
         initialized yet, use first_stmt_info_for_drptr DR by bumping the
         distance from first_stmt_info DR instead as below.  */
       if (!diff_first_stmt_info)
-       msq = vect_setup_realignment (first_stmt_info, gsi, &realignment_token,
+       msq = vect_setup_realignment (loop_vinfo,
+                                     first_stmt_info, gsi, &realignment_token,
                                      alignment_support_scheme, NULL_TREE,
                                      &at_loop);
       if (alignment_support_scheme == dr_explicit_realign_optimized)

that should have been 'vinfo', not 'loop_vinfo'.
Comment 3 GCC Commits 2020-05-06 09:02:17 UTC
The master branch has been updated by Richard Biener <rguenth@gcc.gnu.org>:

https://gcc.gnu.org/g:380a681518c3b387476be1064097f24b0847726d

commit r11-131-g380a681518c3b387476be1064097f24b0847726d
Author: Richard Biener <rguenther@suse.de>
Date:   Wed May 6 10:46:22 2020 +0200

    tree-optimization/94965 - fix typo in vec_info * passing
    
    Should have passed vinfo, not loop_vinfo.
    
    2020-05-06  Richard Biener  <rguenther@suse.de>
    
            PR tree-optimization/94965
            * tree-vect-stmts.c (vectorizable_load): Fix typo.
Comment 4 Richard Biener 2020-05-06 09:02:28 UTC
Fixed.