tree-optimization/94965 - fix typo in vec_info * passing

Should have passed vinfo, not loop_vinfo.

2020-05-06  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/94965
	* tree-vect-stmts.c (vectorizable_load): Fix typo.